# Perun

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yaml
Perun/PerunEditor/: CMakeLists.txt
Perun/PerunEditor/src/: PerunEditorApplication.cpp  PerunEditorApplication.h  PerunEditorPCH.h
Perun/PerunEngine/: CMakeLists.txt
Perun/PerunEngine/dep/glad/: CMakeLists.txt
Perun/PerunEngine/dep/glad/include/glad/: wgl.h
Perun/PerunEngine/src/: PerunEnginePCH.h
Perun/PerunEngine/src/API/OpenGL/: OpenGLAPI.cpp  OpenGLAPI.h  OpenGLContext.cpp  OpenGLContext.h
Perun/PerunEngine/src/OS/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatform.cpp  WindowsWindow.cpp  WindowsWindow.h
Perun/PerunEngine/src/PerunEngine/: Perun.h
Perun/PerunEngine/src/PerunEngine/Core/: Application.cpp  Application.h  EntryPoint.h  Platform.h  Window.cpp  Window.h
Perun/PerunEngine/src/PerunEngine/Core/EventSystem/: EventDispatcher.h
Perun/PerunEngine/src/PerunEngine/Core/EventSystem/Events/: Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
Perun/PerunEngine/src/PerunEngine/Core/Input/: Input.cpp  Input.h  MouseCodes.h
Perun/PerunEngine/src/PerunEngine/GFX/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPIType.h  GraphicsContext.cpp  GraphicsContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
Perun/PerunEngine/src/PerunEngine/PhysX/: Shape.h
Perun/Sandbox/: CMakeLists.txt
Perun/Sandbox/dep/lua-5.4.0/: CMakeLists.txt
Perun/SvarogLang/: CMakeLists.txt
Perun/SvarogLang/src/: Definitions.h  SvarogLangPCH.cpp  SvarogLangPCH.h
Perun/SvarogLang/src/SvarogLang/: Exception.cpp  Exception.h  LoggerHub.cpp  LoggerHub.h  Reader.cpp  Reader.h  Scanner.cpp  Scanner.h  ScriptExample.svgs  Token.cpp  Token.h  Utilities.cpp  Utilities.h
examples/: CMakeLists.txt
examples/test/: CMakeLists.txt  CMakeSources.txt
examples/test/src/: main.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  CMakeSources.txt
libs/core/perun/core/: application.hpp  entry_point.hpp  platform.hpp
libs/core/perun/core/event_system/: event_system.hpp
libs/core/perun/core/event_system/events/: keyboard_events.hpp  mouse_events.hpp
libs/core/perun/core/input/: input.hpp
libs/core/perun/core/internal/platform/macos/: platform.cpp
libs/core/perun/core/internal/platform/windows/: platform.cpp
libs/event_system/: CMakeLists.txt  CMakeSources.txt
libs/event_system/perun/event_system/: event_dispatcher.hpp  event_system.hpp
libs/event_system/perun/event_system/events/: event.hpp  keyboard_events.hpp  mouse_events.hpp  window_events.hpp
libs/event_system/perun/event_system/internal/: event_system.cpp
libs/input/: CMakeLists.txt  CMakeSources.txt
libs/input/perun/input/: input.hpp  key_codes.hpp  mouse_codes.hpp
libs/input/perun/input/internal/: input.cpp
libs/input/perun/input/internal/platform/macos/: input.cpp  input.hpp
libs/input/perun/input/internal/platform/windows/: input.cpp  input.hpp
libs/utils/: CMakeLists.txt  CMakeSources.txt
libs/utils/perun/utils/: defs.hpp
libs/utils/perun/utils/internal/: defs.cpp
libs/window/: CMakeLists.txt  CMakeSources.txt
libs/window/perun/window/: window.hpp
libs/window/perun/window/internal/platform/mac/: window.hpp
libs/window/perun/window/internal/platform/macos/: window.cpp  window.hpp
libs/window/perun/window/internal/platform/windows/: window.cpp  window.hpp
scripts/: collect_sources.py
src/: CMakeLists.txt  CMakeSources.txt  Definitions.hpp  PerunEnginePCH.hpp  definitions.hpp  perun_pch.hpp
src/API/OpenGL/: OpenGLAPI.cpp  OpenGLAPI.hpp  OpenGLContext.cpp  OpenGLContext.hpp
src/OS/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsPlatform.cpp  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
src/PerunEngine/: Perun.hpp
src/PerunEngine/Core/: Application.cpp  Application.hpp  EntryPoint.hpp  Platform.hpp  Window.cpp  Window.h  Window.hpp
src/PerunEngine/Core/EventSystem/: EventDispatcher.hpp  EventSystem.h  EventSystem.hpp
src/PerunEngine/Core/EventSystem/Events/: Event.hpp  KeyboardEvents.hpp  MouseEvents.h  MouseEvents.hpp  WindowEvents.h  WindowEvents.hpp
src/PerunEngine/Core/Input/: Input.cpp  Input.h  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
src/PerunEngine/GFX/: GraphicsAPI.cpp  GraphicsAPI.hpp  GraphicsAPIType.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/os/windows/: windows_input.cpp  windows_input.hpp  windows_platform.cpp  windows_window.cpp  windows_window.hpp
src/perun/core/: application.hpp  entry_point.hpp  platform.hpp  window.hpp
src/perun/core/event_system/: event_dispatcher.hpp  event_system.hpp
src/perun/core/event_system/events/: event.hpp  keyboard_events.hpp  mouse_events.hpp
src/perun/core/input/: input.hpp  key_codes.hpp  mouse_codes.hpp
src/platform/windows/: input.cpp  platform.cpp  window.cpp
third/: CMakeLists.txt  readme.md
third/glad/include/glad/: gl.h
third/glad/src/: gl.c  wgl.c
third/stb/: CMakeLists.txt
wraps/editor/src/: PerunEditorApplication.cpp  PerunEditorApplication.hpp  PerunEditorPCH.hpp
